@@ -5,7 +5,7 @@
  */
 package org.h2.expression.condition;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.h2.engine.SessionLocal;
 import org.h2.expression.Expression;
@@ -76,7 +76,7 @@ public final class BooleanTest extends SimplePredicate {
                 if (not) {
                     if (right == null && c.getColumn().isNullable()) {
                         filter.addIndexCondition(
-                                IndexCondition.getInList(c, List.of(ValueExpression.FALSE, ValueExpression.TRUE)));
+                                IndexCondition.getInList(c, Arrays.asList(ValueExpression.FALSE, ValueExpression.TRUE)));
                     }
                 } else {
                     filter.addIndexCondition(IndexCondition.get(Comparison.EQUAL_NULL_SAFE, c,
